<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ProgressBar
        android:id="@+id/pbMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civRecipeImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@color/white"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/global_app_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/clSnackBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_main_snacbkar" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabMainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:padding="16dp"
        android:src="@drawable/ic_add"
        app:menu_backgroundColor="@color/fab_menu_background"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccent"
        app:menu_fab_size="normal"
        app:menu_labels_colorNormal="@color/white"
        app:menu_labels_colorPressed="@color/fab_menu_label_pressed"
        app:menu_labels_colorRipple="@color/fab_menu_label_ripple"
        app:menu_labels_textColor="@color/black">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMainRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_recipe"
            app:fab_label="@string/activity_main_get_recipe"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMainFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"
            app:fab_colorNormal="@color/facebook"
            app:fab_colorPressed="@color/facebook"
            app:fab_label="@string/activity_main_sign_in_via_facebook"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>